<resources>
    <string name="app_name">TestApplicationO</string>
    <string name="title_activity_custom_text_input_layout">CustomTextInputLayout</string>
    <string name="join_now">Join Now</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_password">Pin Number</string>
    <string name="login_tagline">If you don\'t have invite pin please click here to join</string>
    <string name="net_connection_error_msg">No internet Access, Check your internet connection</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="institution">Institution</string>
    <string name="year">Year</string>
    <string name="branch">Branch</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="order">Order</string>
    <string name="email">Email</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Categories">Select Product</string>
    <string name="select_product">Select Product</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="categories">Categories</string>
    <string name="length">Length</string>
    <string name="breadth">Width</string>
    <string name="height">Height</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="lengthE">72</string>
    <string name="breadthE">32</string>
    <string name="heightE">12</string>
    <string name="colorE">Red</string>
    <string name="priceE">12000</string>
    <string name="quantityE">1</string>
    <string name="addE">Add</string>
    <string name="length_width"><![CDATA[Length & Width]]></string>
    <string name="done">Done</string>
    <string name="completed">Order Completed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrow"><![CDATA[<<]]></string>
    <string name="Mm">Mm</string>
    <string name="inches">Inches</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="p3">P3</string>
    <string name="p4">P4</string>
    <string name="orderId">OrderId</string>
    <string name="orderhistory_head">Your Order Status</string>
    <string name="shippedFrom">Shipped By</string>
    <string name="shiped_to">Shipped To</string>
    <string name="order_date">Order Date</string>
    <string name="orderIdPrase">You Have One Order</string>
    <string name="orderSummary">Order Summary</string>
    <string name="productName">Product Name</string>
    <string name="lenxwidxheigt">len x wid x ht</string>
    <string name="discount">Discount</string>
    <string name="accept">Accept</string>
    <string name="orderBy">Order From</string>
    <string name="status">Status</string>
    <string name="delete_order">Delete</string>
    <string name="customer_info">Customer Details</string>
    <string name="customer_name">Customer</string>
    <string name="barcode">Barcode No</string>
    <string name="dispatch_order">Dispatch Order</string>
    <string name="title_activity_main">AutoCompleteTextViewDemo</string>
    <string name="str_hnt_autocomplete">Enter Country Name</string>
    <string name="menu">mais</string>
    <string name="Rs">\u20B9</string>
    <string name="login">KClothing Admin Login</string>
    <string name="search">Search by Name, Phone Number</string>
    <string name="here_is_your_canvas">Here is your canvas. Start to paint!</string>
    <string name="color">Color</string>
    <string name="emboss">Bold</string>
    <string name="blur">Blur</string>
    <string name="brush_size">Brush size</string>
    <string name="clear_all">Erase all</string>
    <string name="share">Share</string>
    <string name="your_selected_size_is">Selected size: %1$s</string>
    <string name="choose_width">Brush size</string>
    <string name="saved_your_location_to">Saved your artwork to %1$s</string>
    <string name="select">Select</string>
    <string name="continue_fuck">Continue</string>
    <string name="ok">OK</string>
    <string name="pick_color">Pick a Color</string>
    <string name="toolbox_share_title">Share</string>
    <string name="share_title_template">Look at what I painted with Acrylic Paint! --- Acrylic Paint (Simple finger painting) - https://f-droid.org/app/anupam.acrylic</string>
    <string name="share_text_template">Share as text</string>
    <string name="no_way_to_share">Can\'t locate an app to share with…</string>
    <string name="normal">Pencil</string>
    <string name="title_activity_about">About</string>
    <string name="press_back_again">Press back again to exit!\n(Losing all the unsaved work)</string>
    <string name="custom_size_text_content">Custom tailoring charges will be Rs 500 extra per garment. For hip sizes of 50" and higher, since we are using more fabric, the garment will cost Rs 500 more. All measurements in inches.</string>
    <string-array name="shoulder_array_values">
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
    </string-array>
    <string-array name="chest_array_values">
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
        <item> 32 </item>
        <item> 33 </item>
        <item> 34 </item>
        <item> 35 </item>
        <item> 36 </item>
        <item> 37 </item>
        <item> 38 </item>
        <item> 39 </item>
        <item> 40 </item>
        <item> 41 </item>
        <item> 42 </item>
        <item> 43 </item>
        <item> 44 </item>
        <item> 45 </item>
        <item> 46 </item>
        <item> 47 </item>
        <item> 48 </item>
        <item> 49 </item>
        <item> 50 </item>
        <item> 51 </item>
        <item> 52 </item>
        <item> 53 </item>
        <item> 54 </item>
        <item> 55 </item>
        <item> 56 </item>
        <item> 57 </item>
        <item> 58 </item>
        <item> 59 </item>
        <item> 60 </item>
    </string-array>
    <string-array name="waist_array_values">
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
        <item> 32 </item>
        <item> 33 </item>
        <item> 34 </item>
        <item> 35 </item>
        <item> 36 </item>
        <item> 37 </item>
        <item> 38 </item>
        <item> 39 </item>
        <item> 40 </item>
        <item> 41 </item>
        <item> 42 </item>
        <item> 43 </item>
        <item> 44 </item>
        <item> 45 </item>
        <item> 46 </item>
        <item> 47 </item>
        <item> 48 </item>
        <item> 49 </item>
        <item> 50 </item>
    </string-array>
    <string-array name="hip_array_values">
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
        <item> 32 </item>
        <item> 33 </item>
        <item> 34 </item>
        <item> 35 </item>
        <item> 36 </item>
        <item> 37 </item>
        <item> 38 </item>
        <item> 39 </item>
        <item> 40 </item>
        <item> 41 </item>
        <item> 42 </item>
        <item> 43 </item>
        <item> 44 </item>
        <item> 45 </item>
        <item> 46 </item>
        <item> 47 </item>
        <item> 48 </item>
        <item> 49 </item>
        <item> 50 </item>
        <item> 51 </item>
        <item> 52 </item>
        <item> 53 </item>
        <item> 54 </item>
        <item> 55 </item>
        <item> 56 </item>
        <item> 57 </item>
        <item> 58 </item>
        <item> 59 </item>
        <item> 60 </item>
        <item> 61 </item>
        <item> 62 </item>
        <item> 63 </item>
        <item> 64 </item>
        <item> 65 </item>
        <item> 66 </item>
        <item> 67 </item>
        <item> 68 </item>
        <item> 69 </item>
        <item> 70 </item>
    </string-array>
    <string-array name="armhole_array_values">
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
    </string-array>
    <string-array name="muscle_array_values">
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
    </string-array>
    <string-array name="sleeve_length_array_values">
        <item>  1 </item>
        <item>  2 </item>
        <item>  3 </item>
        <item>  4 </item>
        <item>  5 </item>
        <item>  6 </item>
        <item>  7 </item>
        <item>  8 </item>
        <item>  9 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
    </string-array>
    <string name="title_summary">Summary</string>
    <string name="title_profile">Profile</string>
    <string name="title_workexp">Work Experience</string>
    <string name="title_education">Education</string>
</resources>