<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--android:icon="@drawable/ic_dns_black_24dp"-->
    <item
            android:id="@+id/navigation_home"

            android:title="@string/title_summary"
            />
    <!-- android:icon="@drawable/ic_account_circle_black_24dp"-->

    <item
            android:id="@+id/navigation_dashboard"

            android:title="@string/title_profile"/>
    <!--android:icon="@drawable/ic_work_black_24dp"-->

    <item
            android:id="@+id/navigation_meetUp"

            android:title="@string/title_workexp"/>
    <!--android:icon="@drawable/ic_school_black_24dp"-->
    <item
            android:id="@+id/navigation_logo"

            android:title="@string/title_education"/>

</menu>
